*SVN*

* Update Dependencies to ignore constants inherited from ancestors. Closes #6951. [Nicholas Seckar]

* Improved multibyte performance by relying less on exception raising #8159 [Blaine]


*1.4.2* (March 12th, 2007)

* Ruby 1.8.6 and 1.9 define private Time#to_date and #to_datetime; make them
public for compatibility.  [Jeremy Kemper]

* Deprecation: warn on stderr if RAILS_DEFAULT_LOGGER isn't set yet.  [Jeremy Kemper]


*1.4.1* (February 5th, 2007)

* Optimize Class Inheritable Attributes so that unnecessary hashes are not created.  Closes #7472 [Bruce Perens]

* Added :instance_writer option to #mattr_writer/accessor, #cattr_writer/accessor, and #class_inheritable_writer to skip the creation of the instance writer.  [Rick]

* Full test coverage for Inflector.  #7228 [Dan Kubb]


*1.4.0* (January 16th, 2007)

* Document Inflector.ordinalize and merge docs from String inflections.  #7023 [smeade]

* Unbundle flexmock.  [Jeremy Kemper]

* Fix Dependencies.autoloaded? to ignore anonymous modules. Closes #6561. [Nicholas Seckar]

* Update load once paths to prevent nested once constants from being detected and claimed by an external non-once load. [Nicholas Seckar]

* Deprecation: silence warnings when reporting test errors.  [Jeremy Kemper]

* Fix remove_constant to correctly handle constant names of the form "::A::...". References #6720. [Nicholas Seckar]

* Fixed Array#to_xml when it contains a series of hashes (each piece would get its own XML declaration) #6610 [thkarcher/cyu]

* Hash#to_xml handles keys with the same name as Kernel methods.  #6613 [Catfish]

* Don't quote hash keys in Hash#to_json if they're valid JavaScript identifiers.  Disable this with ActiveSupport::JSON.unquote_hash_key_identifiers = false if you need strict JSON compliance. [Sam Stephenson]

* Lazily load the Unicode Database in the UTF-8 Handler [Rick Olson]

* Update dependencies to delete partially loaded constants. [Nicholas Seckar]
